--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-react-hmre": "^1.1.1",
+    "css-loader": "^0.23.1",
     "eslint-plugin-react": "^4.2.1",
     "estraverse": "^4.2.0",
     "estraverse-fb": "^1.3.1",
     "express": "^4.13.4",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "style-loader": "^0.13.1",
     "webpack": "^1.12.13",
     "webpack-dev-middleware": "^1.5.1",
     "webpack-hot-middleware": "^2.10.0"
