--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "estraverse-fb": "^1.3.1",
     "express": "^4.13.4",
     "react": "^0.14.7",
+    "react-bootstrap": "^0.29.4",
     "react-dom": "^0.14.7",
     "style-loader": "^0.13.1",
     "webpack": "^1.12.13",
