--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-react-hmre": "^1.1.1",
+    "bootstrap": "^3.3.6",
     "css-loader": "^0.23.1",
     "eslint-plugin-react": "^4.2.1",
     "estraverse": "^4.2.0",
