--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "estraverse-fb": "^1.3.1",
     "express": "^4.13.4",
     "file-loader": "^0.8.5",
+    "less": "^2.7.1",
     "react": "^0.14.7",
     "react-bootstrap": "^0.29.4",
     "react-dom": "^0.14.7",
