--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "estraverse-fb": "^1.3.1",
     "express": "^4.13.4",
     "file-loader": "^0.8.5",
-    "less": "^2.7.1",
+    "node-sass": "^3.7.0",
     "react": "^0.14.7",
     "react-bootstrap": "^0.29.4",
     "react-dom": "^0.14.7",
+    "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.13",
